--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <body>
     <h1 class="title">すっぴん美肌への道</h1>
     <p>〜ハーブピーリングでターンオーバーを活性化〜</p>
-    <p>ミトコンドリアで働きかけ、細胞から整えていく</p>
+    <p>ハーブピーリングとは、天然由来成分の力で肌のターンオーバーを整えていく美容法。</p>
   </body>
+  <h2>ハーブピーリングの効果とは？</h2>
+  <p>1.ターンオーバーの促進効果</p>
+  <p>2.毛穴の黒ずみやシミの緩和</p>
+  <p>3.くすみやたるみにアプローチ</p>
+  <p>4.ニキビや肌荒れの予防</p>
 </html>
