--- a/index.html
+++ b/index.html
@@ -2,17 +2,44 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>フェイシャルエステ</title>
+    <title>美肌への近道</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <h1 class="title">すっぴん美肌への道</h1>
-    <p>〜ハーブピーリングでターンオーバーを活性化〜</p>
-    <p>ハーブピーリングとは、天然由来成分の力で肌のターンオーバーを整えていく美容法。</p>
-  </body>
-  <h2>ハーブピーリングの効果とは？</h2>
+   <div class="header">
+    <div class="header-logo">facialesute</div>
+    <div class="header-list">
+      <ul>
+       <li>ハーブピーリングとは</li>
+       <li>ハーブピーリングの効果</li>
+       <li>美容と健康</li>
+     </ul>
+   </div>
+  </div>
+
+    <div class="main">
+      <div class="copy-container">
+    <h1>すっぴん美肌への道</h1>
+  <h2>ハーブピーリングとは、天然由来成分の力で肌のターンオーバーを整えていく美容法。</h2>
+</div>
+<div class="contents">
+  <h3 class="section-title"ハーブピーリングの効果とは？</h3>
   <p>1.ターンオーバーの促進効果</p>
   <p>2.毛穴の黒ずみやシミの緩和</p>
   <p>3.くすみやたるみにアプローチ</p>
   <p>4.ニキビや肌荒れの予防</p>
+  </div>
+  <h4>肌本来の力を最大限に強くする</h4>
+  </html>
+  <div class="contact-form">
+  <div class="footer">
+    <div class="footer-logo">facialesute</div>
+    <div class="footer-list">
+      <li>ご予約</li>
+      <li>お問い合せ</li>
+    </div>
+   </div>
+  </div>
+ </div>
+</body>
 </html>
